# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
configuration/: base.yml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
